fix: adjust height of element #d for better responsiveness on mobile

--- a/src/inicio.css
+++ b/src/inicio.css
@@ -1,10 +1,10 @@
 @media (max-width: 768px) and (min-width: 320px) {
   
  #d {
-    height: 150px;
+    height: 200px;
     background-color: transparent;
  }
- 
+
 }
 
 @media (max-width: 1024px) and (min-width: 769px) {
